bubba-frontend (2.3~rc4) vincent hugo; urgency=low

  * Set default selected in backup wizard

 -- Carl Fürstenberg <carl@excito.com>  Tue, 12 Jul 2011 15:15:32 +0200

bubba-frontend (2.3~rc2) vincent hugo; urgency=low

  * Cleanup indentation and formating, no logic change
  * Manually setup the post data so shell and remote works under IE8

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jul 2011 16:53:44 +0200

bubba-frontend (2.3~rc1) vincent hugo; urgency=low

  * Remove Explain link for hotfix
  * Remove the focus first input flaga (Closes: 1703)

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Jul 2011 15:27:55 +0200

bubba-frontend (2.1.48) vincent hugo; urgency=low

  * Mark selected options as pre-selected (Closes: 1681)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jul 2011 14:13:49 +0200

bubba-frontend (2.1.47) vincent hugo; urgency=low

  * Fix tyop, requrie → require

 -- Carl Fürstenberg <carl@excito.com>  Mon, 04 Jul 2011 13:19:27 +0200

bubba-frontend (2.1.46) vincent hugo; urgency=low

  * Adding more german translations (Closes: #1690)

 -- Carl Fürstenberg <carl@excito.com>  Thu, 16 Jun 2011 15:28:44 +0200

bubba-frontend (2.1.45) vincent hugo; urgency=low

  * Inline text field and updated text

 -- Carl Fürstenberg <carl@excito.com>  Wed, 08 Jun 2011 12:46:58 +0200

bubba-frontend (2.1.44) vincent hugo; urgency=low

  * Adding missing slash in default lange loading

 -- Carl Fürstenberg <carl@excito.com>  Wed, 08 Jun 2011 10:43:18 +0200

bubba-frontend (2.1.43) vincent hugo; urgency=low

  * Updating german translation

 -- Carl Fürstenberg <carl@excito.com>  Wed, 08 Jun 2011 10:37:55 +0200

bubba-frontend (2.1.42) vincent hugo; urgency=low

  * Syntax error in php file, Fales → false
  * More message updates (Closes: #1685)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 07 Jun 2011 18:14:14 +0200

bubba-frontend (2.1.41) vincent hugo; urgency=low

  * Check for nullness
  * Return true on backup creation
  * wrong logic for timeline