@@ -1957,3 +1957,7 @@ table.ui-table-two-col tbody td, table.ui-table-two-col tbody th {
 input.ui-input-text, .ui-dialog-title {
   width: 100%;
 }
+
+.ui-printer-unplugged {
+	color: #333;
+}
